# motra-setups

./: .gitignore  README.md
dmz-demo/: README.md  pyproject.toml
dmz-demo/src/: compose.yaml  requirements.txt
dmz-demo/src/cli/: main.py
dmz-demo/src/client_server/: forwarder.py  it_opcua_server.py  mock_server.py  opcua_client.py  reader.py  redis_bridge.py
dmz-demo/src/core/: config.py
fuxa-demo/: compose.yml
fuxa-demo/fuxa_appdata/: mysettings.json  project.fuxap.db  users.fuxap.db
simple-water-treatment-plant/dmz-multi-dev/: .env  dmz-server.yaml  fuxa.yaml  headunit.yaml  levelsensor-server.yaml  plc.yaml  valve-server.yml
simple-water-treatment-plant/dmz-single-dev/: .env  singledev.yaml
simple-water-treatment-plant/multi-dev/: .env  headunit.yaml  levelsensor-server.yml  plc.yaml  plc.yml  valve-server.yml
simple-water-treatment-plant/single-dev/: .env  compose.yml
