[project]
name = "dmz-demo"
version = "0.1.0"
description = "Testing project for the DMZ forwarding demo"
authors = [
    {name = "Peter Heller"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "redis (>=7.2.1,<8.0.0)",
    "asyncua @ git+https://github.com/FreeOpcUa/opcua-asyncio.git@master",
    "pydantic (>=2.12.5,<3.0.0)",
    "typer (>=0.24.1,<0.25.0)",
    "tenacity (>=9.1.4,<10.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "dmz_demo", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
